# property_bag

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
include/property_bag/: Formater.h  eigen_boost_serialization.h  property.h  property_bag.h  property_bag.hpp  property_bag_boost_serialization.h  property_boost_serialization.h  property_serialization.h  utils.h
include/property_bag/serialization/: eigen_boost_serialization.h  property_bag_boost_serialization.h  property_boost_serialization.h  ros_boost_serialization.h
src/: main.cpp  property.cpp  property_bag.cpp  registry.cpp
src/serialization/: boost_serialization_registry.cpp  eigen_boost_serialization_registry.cpp  ros_boost_serialization_registry.cpp
test/: CMakeLists.txt  gtest_any.cpp  gtest_eigen_boost_serialization.cpp  gtest_property.cpp  gtest_property_bag.cpp  gtest_property_bag_boost_serialization.cpp  gtest_property_bag_pair.cpp  gtest_property_boost_serialization.cpp  gtest_ros_boost_serialization.cpp  utils_gtest.h
