<?xml version="1.0"?>
<package>
  <name>property_bag</name>
  <version>0.0.1</version>
  <description>A generic container based on type-erasure.</description>

  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>

  <license>BSD</license>

  <author email="jeremie.deray@pal-robotics.com">Jeremie Deray</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
  <run_depend>cmake_modules</run_depend>

  <export>
    <!-- The export -->
  </export>
</package>
