<?xml version="1.0"?>
<package format="2">
  <name>property_bag</name>
  <version>0.0.9</version>
  <description>A generic container based on type-erasure.</description>

  <maintainer email="jeremie.deray@pal-robotics.com">Jeremie Deray</maintainer>

  <license>LGPLv3</license>

  <author email="jeremie.deray@pal-robotics.com">Jeremie Deray</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <build_export_depend>eigen</build_export_depend>
  <test_depend>rostest</test_depend>

  <export>
    <!-- The export -->
  </export>
</package>
